@startuml
title Diagramme de classes - Sprint 6
left to right direction
hide circle
skinparam shadowing false
skinparam classAttributeIconSize 0

class User {
  +id: number
  +email: string
  +password?: string
  +role: string
  +is_verified: boolean
  +oauth_provider: string
  +profile_completed: boolean
  +created_at: Date
  +register()
  +login()
  +verifyEmail()
  +resetPassword()
  +updateProfile()
}

class Notification {
  +id: number
  +userId: number
  +type: string
  +title: string
  +body?: string
  +read: boolean
  +push()
  +markRead()
  +delete()
}

class ActivityEvent {
  +id: number
  +athleteId: number
  +type: string
  +payload?: json
  +created_at: Date
  +record()
}

class Session {
  +id: number
  +athleteId?: number
  +coachId?: number
  +programId?: number
  +date?: Date
  +time: string
  +status: string
  +create()
  +update()
  +cancel()
}

class WorkoutLog {
  +id: number
  +athleteId: number
  +programId?: number
  +sessionId?: number
  +scheduledDate: Date
  +completedAt?: Date
  +status: string
  +start()
  +complete()
  +quit()
  +emitEvent()
}

class DietLog {
  +id: uuid
  +athleteId: number
  +dietPlanId?: uuid
  +date: string
  +isCompleted: boolean
  +totalCaloriesConsumed: number
  +computeCompliance()
}

class BodyMetric {
  +id: number
  +athleteId: number
  +date: Date
  +weight?: decimal
  +bodyFat?: decimal
  +vo2max?: decimal
  +addMetric()
}

User "1" --> "0..*" Notification : reçoit
User "1" --> "0..*" Session : anime
@enduml
